# travel-analytics-platform

./: .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  README.md  pyproject.toml  requirements.txt
.streamlit/: config.toml
airflow/: Dockerfile  README.md  docker-compose.yaml  entrypoint-with-deps.sh
airflow/dags/: dag_dbt_pipeline.py  dbt_medallion_daily.py
bronze/: .gitignore  add_ingested_at_columns.sh  check_all_tables.sh  create_15_new_bronze_tables.sh  publish_15_tables_10_records.sh  publish_15_tables_10_records_v2.sh  publish_to_70k.py  run_15_new_pipelines.sh  run_15_new_pipelines_backup.sh  start_all_pipelines.sh
dashboard/: agent.py  app.py
dbt/dbt_health_monitor/: README.md  dbt_project.yml  package-lock.yml  packages.yml
dbt/dbt_health_monitor/models/: _sources.yml  exposures.yml
dbt/dbt_health_monitor/tests/: assert_agency_event_timestamps.sql  (+28 more)
docs/: architecture_pricing.md
docs/adr/: ADR-0001-bigquery-as-warehouse.md  ADR-0002-airflow-for-orchestration.md  ADR-0003-dbt-for-transformations.md  ADR-0004-beam-for-ingestion.md  ADR-0005-streamlit-and-superset-for-visualization.md  README.md
docs/diagrams/: generate.py
infra/data/: README.md  main.tf
infra/shared/: compute.tf
ingestion/: beam_bronze.py
ingestion/bronze/: bronze_pipeline.py
scripts/: setup-deploy-key.sh  startup.sh
simulator/: publisher.py
streamlit/: app.py
superset/: Dockerfile  build_import.py  create_dashboard.py  docker-compose.yml  init.sh  setup_bigquery.py  superset_config.py
tests/: test_dashboard_conversion.py
(+58 files in other folders)
